# ringlite

./: .gitignore  CLAUDE.md  README.md  package.json
landing/: .env.example  package-lock.json  package.json
landing/app/: globals.css  layout.tsx  page.tsx
landing/app/api/checkout/: route.ts
landing/app/api/webhook/: route.ts
landing/app/privacy/: page.tsx
landing/app/success/: page.tsx
landing/app/terms/: page.tsx
landing/lib/: license.ts
landing/public/: RingLite_1.0.0_aarch64.dmg  RingLite_1.2.0_aarch64.dmg
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  licensing.rs  main.rs
