[package]
name = "ringlite"
version = "0.1.0"
description = "A virtual ring light for video calls and recordings"
authors = ["Scott Pierce"]
edition = "2021"

[lib]
name = "ringlite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# macOS-specific dependencies for NSWindow access
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

# Windows-specific dependencies for SetWindowDisplayAffinity
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
